--- a/src/components/HeaderMenu/HeaderMenu.css
+++ b/src/components/HeaderMenu/HeaderMenu.css
@@ -1,16 +1,33 @@
 .header{
+    position: fixed;
+    width: 100%;
+    height: 80px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
+    background-color: wheat;
 }
 
-.header__button{
+.logo{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    background-color: yellowgreen;
+}
+
+.menu_buttons{
+    height: 100%;
+    display: flex;
+    background-color: tomato;
+}
+
+.menu_buttons__button{
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
     font-size: 24px;
 }
 
-.header__button_selected{
+.menu_buttons__button_selected{
     border-bottom: 5px solid #FF0074;
 }
