--- a/src/components/HeaderMenu/HeaderMenu.css
+++ b/src/components/HeaderMenu/HeaderMenu.css
@@ -1,24 +1,34 @@
-.header{
+.menu{
     position: fixed;
     width: 100%;
     height: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: wheat;
+    background-color: #151515;
+}
+
+.menu-toggler{
+    display: none;
+    color: honeydew;
 }
 
 .logo{
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100%;
-    background-color: yellowgreen;
+    color: honeydew;
+}
+
+.logo__image{
+    height: 60px;
+    margin-left: 10px;
 }
 
 .menu_buttons{
-    height: 100%;
     display: flex;
-    background-color: tomato;
+    height: 100%;
 }
 
 .menu_buttons__button{
@@ -26,8 +36,96 @@
     margin-bottom: 10px;
     padding: 10px;
     font-size: 24px;
+    color: #ffffff;
+}
+
+.menu_buttons__button:hover{
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .menu_buttons__button_selected{
-    border-bottom: 5px solid #FF0074;
+    border-bottom: 4px solid #f0f0f0;
+}
+
+@media screen and (max-width: 768px) {
+    .menu{
+        position: fixed;
+        left: 0px;
+        width: 200px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        transition: 350ms;
+    }
+
+    .menu_hidden{
+        left: -200px;
+    }
+
+    .menu-toggler{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        position: fixed;
+        width: 100%;
+        transition: 350ms;
+        top: 0px;
+    }
+    
+    .menu-toggler_black{
+        background-color: #151515;
+    }
+
+    .menu-toggler_hidden{
+        transition: 350ms;
+        top: -80px;
+    }
+
+    .menu-toggler__button{
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 3px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .logo{
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo__image{
+        height: 70px;
+        margin-left: 0px;
+    }
+
+    .logo__image_small{
+        height: 55px;
+    }
+
+    .menu_buttons{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }    
+
+    .menu_buttons__button{
+        width: 100%;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 10px;
+        font-size: 16px;
+    }
+
+    .menu_buttons__button_selected{
+        border-bottom: 0px solid #FF0074;
+        border-left: 5px solid #FF0074;
+        font-weight: bold;
+    }
 }
