--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -3,14 +3,49 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 200vh;
+    height: 100vh;
     background-color:royalblue;
 }
 
 .greeting{
-    background-color: tomato;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.greeting__text{
+    color: #ffffff;
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.greeting__text_first{
+    flex: 1;
+    text-align: right;
+}
+
+.greeting__text_second{
+    flex: 1;
+    margin-left: 20px;
+    background-color: brown;
+     background: -webkit-linear-gradient(#ffbb00,#ff0074);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .timer{
     background-color: violet;
+}
+
+@media screen and (max-width: 768px) {
+    .greeting{
+        flex-direction: column;
+    }
+
+    .greeting__text_second{
+        margin-left: 0px;
+        min-height: 80px;
+    }
 }
