--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -1,4 +1,4 @@
-.homepage{
+.greetings{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,7 +7,7 @@
     background-color:royalblue;
 }
 
-.greeting{
+.words{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -15,18 +15,18 @@
     justify-content: center;
 }
 
-.greeting__text{
+.words__text{
     color: #ffffff;
-    font-size: 50px;
+    font-size: 100px;
     font-weight: 500;
 }
 
-.greeting__text_first{
+.words__text_first{
     flex: 1;
     text-align: right;
 }
 
-.greeting__text_second{
+.words__text_second{
     flex: 1;
     margin-left: 20px;
     background-color: brown;
@@ -35,17 +35,44 @@
     -webkit-text-fill-color: transparent;
 }
 
-.timer{
-    background-color: violet;
+.timer__text{
+    font-weight: 600;
+    font-size: 35px;
+    color: #ffffff; 
+    margin-left: 40px;
+}
+
+.purposes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: orange;
+}
+
+.purposes__title{
+    font-size: 60px;
+    font-weight: 700;
+    text-align: center;
 }
 
 @media screen and (max-width: 768px) {
-    .greeting{
+    .words{
         flex-direction: column;
     }
 
-    .greeting__text_second{
+    .words__text{
+        color: #ffffff;
+        font-size: 50px;
+        font-weight: 500;
+    }
+
+    .words__text_second{
         margin-left: 0px;
         min-height: 80px;
+    }
+
+    .timer__text{
+        margin-left: 0px;
     }
 }
