--- a/src/components/PurposesList/PurposesList.css
+++ b/src/components/PurposesList/PurposesList.css
@@ -2,27 +2,41 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 80%;
-    background-color: lawngreen;
+    width: 70%;
+    margin-top: 50px;
 }
 
 .purpose{
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
 .purpose__title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #ffffff;
+}
 
+.purpose__description{
+    text-align: center;
+    padding: 20px;
+    font-size: 16px;
+    color: #ffffff;
 }
 
 .purpose__image{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 768px) {
     .purposes_list{
         flex-direction: column;
+        width: 90%;
+        margin-top: 30px;
     }
+    
 }
