--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 89vh;
     background-color: orange;
 }
 
@@ -54,6 +54,20 @@
     font-size: 60px;
     font-weight: 700;
     text-align: center;
+    color: #ffffff;
+}
+
+.purposes__description{
+    width: 70%;
+    font-size: 21px;
+    text-align: center;
+    margin-top: 15px;
+    color: #ffffff;
+}
+
+.sponsors{
+    height: 50vh;
+    background-color: crimson;
 }
 
 @media screen and (max-width: 768px) {
@@ -74,5 +88,18 @@
 
     .timer__text{
         margin-left: 0px;
+    }
+
+    .purposes {
+        height: 100%;
+    }
+
+    .purposes__title{
+        font-size: 35px;
+    }
+    
+    .purposes__description{
+        width: 80%;
+        font-size: 16px;
     }
 }
