--- a/src/components/PurposesList/PurposesList.css
+++ b/src/components/PurposesList/PurposesList.css
@@ -27,8 +27,8 @@
 }
 
 .purpose__image{
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     margin-bottom: 20px;
 }
 
@@ -36,7 +36,18 @@
     .purposes_list{
         flex-direction: column;
         width: 90%;
-        margin-top: 30px;
+        margin-top: 40px;
     }
     
+    .purpose{
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    .purpose__description{
+        text-align: center;
+        padding: 5px;
+        font-size: 16px;
+        color: #ffffff;
+    }
 }
