--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -46,8 +46,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 89vh;
     background-color: orange;
+    padding-bottom: 30px;
 }
 
 .purposes__title{
