--- a/src/components/HeaderMenu/HeaderMenu.css
+++ b/src/components/HeaderMenu/HeaderMenu.css
@@ -6,6 +6,7 @@
     flex-direction: row;
     justify-content: space-between;
     background-color: #151515;
+    z-index: 1000;
 }
 
 .menu-toggler{
