--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -1,12 +1,10 @@
-
-
-.google-map{
+.google_map__map{
     width: 70vw;
-    height: 60vh;
+    height: 75vh;
 }
 
 @media screen and (max-width: 768px) {
-    .google-map{
+    .google_map__map{
         width: 90vw;
         height: 90vh;
     }
