--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -243,6 +243,43 @@
     color: #ffffff;
 }
 
+.contact_us{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: chocolate;
+}
+
+.contact_us_title{
+    width: 35vw;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.contact_us_title__text{
+    font-size: 60px;
+    font-weight: 700;
+    text-align: center;
+    color: #ffffff;
+}
+
+.contact_us_info{
+    width: 35vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.contact_us_info__text{
+    color: #ffffff;
+    font-size: 22px;
+}
+
+.bi-telephone-fill{
+    margin-bottom: 5px;
+}
+
 @media screen and (max-width: 768px) {
     .words{
         flex-direction: column;
@@ -348,5 +385,23 @@
 
     .google_map_title__text{
         font-size: 35px;
+    }
+
+    .contact_us{
+        flex-direction: column;
+    }
+
+    .contact_us_title{
+        width: 90vw;
+        padding-top: 0px;
+        padding-bottom: 20px;
+    }
+
+    .contact_us_title__text{
+        font-size: 35px;
+    }
+    
+    .contact_us_info{
+        width: 90vw;
     }
 }
