--- a/src/pages/speakers/SpeakersPage.css
+++ b/src/pages/speakers/SpeakersPage.css
@@ -4,12 +4,14 @@
     justify-content: center;
     align-items: center;
     padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .speakers_title{
     width: 70vw;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom: 10px;
+    margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,9 +24,18 @@
     color: #151515;
 }
 
+.speakers_members{
+    width: 70vw;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (max-width: 768px) {
     .speakers{
-        padding-top: 50px;
+        padding-top: 20px;
     }
 
     .speakers_title__text{
