--- a/src/components/Speaker/Speaker.css
+++ b/src/components/Speaker/Speaker.css
@@ -4,10 +4,49 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: cornflowerblue;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;   
 }   
+
+.speaker_image{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    background: -webkit-linear-gradient(#ffbb00,#ff0074);
+}
+
+.speaker_image__avatar{
+    width: 142px;
+    height: 142px;
+    object-fit: cover;
+    border-radius: 100px;
+}
 
 .speaker__name{
     color:#000;
-    font-size: 24px;
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+.speaker__company{
+    font-size: 16px;
+    margin-top: 2px;
+}
+
+.speaker__description{
+    width: 250px;
+    text-align: center;
+    margin-top: 5px;
 }
