--- a/src/components/LocationHint/LocationHint.css
+++ b/src/components/LocationHint/LocationHint.css
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background: -webkit-linear-gradient(#ffbb00,#ff0074);
+    background: -webkit-linear-gradient(0.1turn, #ffbb00,#ff0074);
     padding: 20px;
     width: 300px;
     border-radius: 30px;
@@ -44,7 +44,6 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        background: -webkit-linear-gradient(#ffbb00,#ff0074);
         padding: 20px;
         width: 80vw;
         border-radius: 30px;
