--- a/src/components/PurposesList/PurposesList.css
+++ b/src/components/PurposesList/PurposesList.css
@@ -20,10 +20,14 @@
 }
 
 .purpose__description{
+    padding-right: 15px;
     text-align: center;
-    padding: 20px;
-    font-size: 16px;
+    padding: 12px;
+    padding-left: 15px;
+    font-size: 17px;
     color: #ffffff;
+    font-family: 'Roboto';
+    font-weight: 300;
 }
 
 .purpose__image{
