--- a/src/components/Speaker/Speaker.css
+++ b/src/components/Speaker/Speaker.css
@@ -35,7 +35,7 @@
 }
 
 .speaker__name{
-    font-size: 28px;
+    font-size: 28px;/*govno jopa barebuh suka*/
     margin-top: 12px;
     color:#ffffff;
     font-family: 'Roboto';
