--- a/src/components/PurposesList/PurposesList.css
+++ b/src/components/PurposesList/PurposesList.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     width: 70%;
     margin-top: 50px;
+    min-height: 410px;
 }
 
 .purpose{
@@ -11,6 +12,14 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
+    opacity: 0;
+    margin-top: 50px;
+}
+
+.purpose_2{
+    transition-duration: 1s;
+    opacity: 1;
+    margin-top: 0px;
 }
 
 .purpose__title{
@@ -41,6 +50,7 @@
         flex-direction: column;
         width: 90%;
         margin-top: 40px;
+        height: auto;
     }
     
     .purpose{
