--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -25,7 +25,7 @@
     display: flex;
     align-self: center;
     justify-content: center;
-    width: 400px;
+    width: 600px;
     height: 400px;
     font-family: 'Roboto';
     font-weight: 350;
@@ -34,7 +34,7 @@
 
 .selected_speaker{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
@@ -48,22 +48,34 @@
     object-fit: cover;
     padding: 5px;
     margin-bottom: 20px;
+    margin-right: 25px;
     background: -webkit-linear-gradient(0.1turn, #ffbb00,#ff0074);
 }
 
-.selected_speaker__name{
+.selected_speaker_text{
+    display: flex;
+    flex-direction: column;
+}
+
+.selected_speaker_text__name{
     color: #ffffff;
-    text-align: center;
     font-size: 34px;
     font-weight: 400;
 }
 
-.selected_speaker__theme{
+.selected_speaker_text__theme{
     color: #ffffff;
-    text-align: center;
     font-size: 24px;
     font-family: 'Roboto';
     font-weight: 350;
+}
+
+.selected_speaker_text__description{
+    color: #ffffff;
+    font-size: 16px;
+    font-family: 'Roboto';
+    font-weight: 300;
+    margin-top: 8px;
 }
 
 .selected_logo{
@@ -73,8 +85,9 @@
 }
 
 .selected_logo__image{
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    padding-top: 20px;
+    height: 70%;
     object-fit: contain;
 }
 
@@ -108,7 +121,14 @@
 @media screen and (max-width: 768px) {
     .selected_part{
         width: 80vw;
+        height: auto;
         align-self: center;
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    .selected_speaker{
+        flex-direction: column;
     }
 
     .schedule_days__day{
