--- a/src/components/Companies/Companies.css
+++ b/src/components/Companies/Companies.css
@@ -74,6 +74,11 @@
     flex-direction: row;
 }
 
+.sponsors_companies_third_row{
+    display: flex;
+    flex-direction: row;
+}
+
 .idap{
     flex: 1;
     flex-direction: column;
@@ -122,7 +127,7 @@
     flex: 1;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: #f0f0f0;
+    background-color: #FFB500;
 }
 
 .foxminded__title{
@@ -154,6 +159,90 @@
 }
 
 .foxminded__link{
+    text-decoration: underline;
+    color: #000000;
+}
+
+.livarava{
+    flex: 1;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #f0f0f0;
+}
+
+.livarava__title{
+    font-size: 36px;
+    font-weight: 550;
+    color: #000000;
+}
+
+.livarava_info{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.livarava_info__image{
+    width: 50%;
+    padding: 20px;
+}
+
+.livarava_info__description{
+    width: 50%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    text-align: end;
+    font-size: 20px;
+    color: #000000;
+}
+
+.livarava__link{
+    text-decoration: underline;
+    color: #000000;
+}
+
+.qatestlab{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    flex: 1;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #A1C1E3;
+}
+
+.qatestlab__title{
+    font-size: 36px;
+    font-weight: 550;
+    color: #000000;
+}
+
+.qatestlab_info{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.qatestlab_info__image{
+    width: 50%;
+    padding: 20px;
+}
+
+.qatestlab_info__description{
+    width: 50%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    text-align: start;
+    font-size: 20px;
+    color: #000000;
+}
+
+.qatestlab__link{
     text-decoration: underline;
     color: #000000;
 }
