--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -40,7 +40,7 @@
     align-items: center;
     padding-bottom: 50px;
     padding-top: 30px;
-    background-color: #00254c;
+    background-color: #012347;
 }
 
 .schedule_title{
