--- a/src/components/ScheduleDay/ScheduleDay.css
+++ b/src/components/ScheduleDay/ScheduleDay.css
@@ -1,13 +1,16 @@
 .schedule_day{
     height: 160px;
+    width: 75%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    align-self: center;
 }
 
 @media screen and (max-width: 768px) {
     .schedule_day{
+        width: 100%;
         height: auto;
         flex-wrap: wrap;
     }
