--- a/src/components/Speaker/Speaker.css
+++ b/src/components/Speaker/Speaker.css
@@ -1,8 +1,8 @@
 .speaker{
     width: 300px;
+    height: 410px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
